More tyling fixes, spacing between items is closer to the desired result.

--- a/packages/app/pages/Organization/cardStyle.scss
+++ b/packages/app/pages/Organization/cardStyle.scss
@@ -6,6 +6,7 @@
   flex-direction: row;
   border-style: solid;
   border-width: thin;
+  border-radius: 4px;
   background-color: white;
   padding: 8px;
   margin-top: 6px;
